dark mode ,spacing and text color fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@ body {
   color: var(--text-color);
   transition: background-color 0.3s, color 0.3s;
 }
-.link{
+a{
   color: var(--text-color);
 }
 
@@ -29,5 +29,6 @@ body {
 .container{
   max-width: 800px;
   margin: 0 auto;
+  padding: 1rem;
   
 }
