--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,4 @@
+
 .heroContainer{
   display: flex;
   padding: 30px 0px;
@@ -26,6 +27,7 @@
   justify-content: center;
   margin: 0 auto;
 }
+
 .img{
   border-radius: 50%;
 }
@@ -42,5 +44,8 @@
   .wrapper{
     grid-template-columns: 1fr;
     place-items: center;
+  }
+  .img_container{
+    padding-top: 2rem;
   }
 }
