--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -11,7 +11,7 @@
 .link{
     text-decoration: none;
     font-size: 16px;
-    color: black;
+    color: var(--text-color)
 }
 .link:hover{
     color: rgb(146, 146, 146);
